--- a/web/pom.xml
+++ b/web/pom.xml
@@ -8,12 +8,68 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>web</artifactId>
 	<packaging>war</packaging>
+	<properties>
+		<spring.version>4.0.4.RELEASE</spring.version>
+		<slf4j.version>1.5.10</slf4j.version>
+	</properties>
 	<dependencies>
         <dependency>
             <groupId>com.imaginea.mobile.tool</groupId>
             <artifactId>android-tool</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
          </dependency>
+         <dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+        <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- JSR 303 with Hibernate Validator -->
+		<!-- <dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.0.0.GA</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.0.2.GA</version>
+		</dependency> -->
+		
 	</dependencies>
 	
 	<build>
@@ -24,14 +80,19 @@
 		        <artifactId>maven-war-plugin</artifactId>
 		        <version>2.4</version>
 		        <configuration>
-		        	<webappDirectory>${basedir}/src/main/webapp</webappDirectory>
+		        	<webXml> ${basedir}/src/main/webapp/WEB-INF/web.xml</webXml>
 		        </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.1.0.v20131115</version>
+				<version>9.2.1.v20140609</version>
 			</plugin>
+			<!-- <plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>8.1.15.v20140411</version>
+			</plugin> -->
 		</plugins>
 	</build>
 </project>
