--- a/web/pom.xml
+++ b/web/pom.xml
@@ -70,6 +70,13 @@
 			<version>4.0.2.GA</version>
 		</dependency> -->
 		
+		<!-- Jackson JSON Processor -->
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.8.1</version>
+		</dependency>
+		
 	</dependencies>
 	
 	<build>
