--- a/web/pom.xml
+++ b/web/pom.xml
@@ -10,7 +10,8 @@
 	<packaging>war</packaging>
 	<properties>
 		<spring.version>4.0.4.RELEASE</spring.version>
-		<slf4j.version>1.5.10</slf4j.version>
+		<slf4j.version>1.7.5</slf4j.version>
+		<jackson.databind-version>2.2.3</jackson.databind-version>
 	</properties>
 	<dependencies>
         <dependency>
@@ -58,24 +59,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- JSR 303 with Hibernate Validator -->
-		<!-- <dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-			<version>1.0.0.GA</version>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>4.0.2.GA</version>
-		</dependency> -->
-		
 		<!-- Jackson JSON Processor -->
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.8.1</version>
-		</dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.databind-version}</version>
+        </dependency>
 		
 	</dependencies>
 	
@@ -95,11 +84,6 @@
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>9.2.1.v20140609</version>
 			</plugin>
-			<!-- <plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>8.1.15.v20140411</version>
-			</plugin> -->
 		</plugins>
 	</build>
 </project>
